--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,6 @@
   }
 }
 
-
 .form {
   display: flex;
   flex-direction: column;
@@ -58,5 +57,13 @@
   background-color: var(--color-primary);
   border-radius: var(--border-radius);
   width: 100%;
-  max-width: 343px;
+
+  @media (min-width: 375px) {
+    max-width: 343px;
+  }
+
+  @media (min-width: 768px) {
+    padding: 48px 64px;
+    max-width: 628px;
+  }
 }
