--- a/src/components/ActionBlock/ActionBlock.module.css
+++ b/src/components/ActionBlock/ActionBlock.module.css
@@ -5,16 +5,19 @@
   align-items: center;
   gap: 8px;
   width: 100%;
-  max-width: 343px;
-  align-self: center;
-}
+  /* align-self: center; */
 
-.btnAction {
-  width: 100%;
-  height: 56px;
+  @media (min-width: 768px) {
+    width: 343px;
+  }
 
   @media (min-width: 768px) {
     width: 500px;
     height: 60px;
   }
+}
+
+.btnAction {
+  width: 100%;
+  height: 56px;
 }
