--- a/src/components/Button/AddWordBtn/AddWordBtn.module.css
+++ b/src/components/Button/AddWordBtn/AddWordBtn.module.css
@@ -1,3 +1,53 @@
 .btnAddWord {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  align-items: flex-start;
+  width: 120px;
+
+  &:hover .btnName,
+  &:hover .icon {
+    color: rgba(var(--rgb-color-font-primary), 0.5);
+  }
+
+  @media(min-width: 1440px) {
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    width: 165px;
+    height: 22px;
+  }
+}
+
+.btnName {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+
+  @media (min-width: 768px) {
+    display: inline-block;
+    position: static;
+    width: 100%;
+    font-size: var(--fs-small);
+    height: 19px;
+    margin: 0;
+  }
+
+    @media(min-width: 1440px) {
+      font-size: var(--fs-base);
+      height: 22px;
+      width: 137px;
+    }
+
+}
+
+.icon {
+  color: var(--color-primary);
 }
