--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -14,7 +14,7 @@
   position: relative;
   background-color: var(--color-primary);
   color: var(--color-font-secondary);
-  border-radius: var(--border-radius);
+  border-radius: var(--border-big-radius);
   overflow: hidden;
 
   &:hover {
