--- a/src/components/EditWordForm/EditWord.module.css
+++ b/src/components/EditWordForm/EditWord.module.css
@@ -2,18 +2,35 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  @media (min-width: 768px) {
+    gap: 18px;
+  }
 }
 
 .fieldWrap {
   display: flex;
   flex-direction: column;
   gap: 8px;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    gap: 32px;
+    align-items: center;
+  }
 }
 
-.wordWrap {
+form .wordWrap {
   display: flex;
+  align-items: center;
   gap: 8px;
   align-items: center;
+
+  @media (min-width: 768px) {
+    width: 114px;
+    order: 2;
+    height: 32px;
+  }
 }
 
 .iconFlag {
@@ -25,6 +42,10 @@
   height: 48px;
   width: 100%;
   position: relative;
+
+  @media (min-width: 768px) {
+    width: 354px;
+  }
 }
 
 .inputWrap input {
@@ -32,6 +53,7 @@
   border-radius: var(--border-radius);
   border: 1px solid #d1d5db;
   background-color: transparent;
+  color: var(--color-font-secondary)
 }
 
 .btnWrap {
