--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,17 +10,22 @@
   justify-content: center;
   z-index: 10;
   overflow-y: auto;
-  padding-top: 60px;
+  padding-top: 80px;
+  padding-inline: 16px;
+  align-items: flex-start;
 }
 
 .containerModal {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
   width: 100%;
-  max-width: 343px;
+
+  @media (min-width: 768px) {
+    width: auto;
+  }
 }
 
 .btnClose {
