--- a/src/components/TrainingRoom/TaskPreview/TaskPreview.module.css
+++ b/src/components/TrainingRoom/TaskPreview/TaskPreview.module.css
@@ -3,4 +3,15 @@
   gap: 8px;
   align-items: center;
   align-self: flex-end;
+
+  @media (min-width: 768px) {
+    align-self: flex-start;
+  }
+}
+
+.taskTxt {
+  @media (min-width: 768px) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
