--- a/src/page/DictionaryPage/DictionaryPage.module.css
+++ b/src/page/DictionaryPage/DictionaryPage.module.css
@@ -13,8 +13,8 @@ main {
   padding: 16px 0;
 }
 
-.en {
-  /* padding: 16px 4px 16px 4px; */
+/* .en {
+  padding: 16px 4px 16px 4px;
   width: 100%;
   text-wrap: wrap;
 
@@ -30,7 +30,7 @@ main {
 }
 
 .ua {
-  /* /padding: 16px 8px 16px 6px; */
+  /padding: 16px 8px 16px 6px;
   width: 100%;
    text-wrap: wrap;
 
@@ -46,7 +46,7 @@ main {
 }
 
 .progress {
-  /* padding: 8px 6px; */
+  padding: 8px 6px;
   width: 100%;
 
      @media (min-width: 375px) {
@@ -60,7 +60,7 @@ main {
 }
 
 .actions {
-  /* padding: 6px 3px; */
+  padding: 6px 3px;
   width: 45px;
 
 
@@ -88,4 +88,4 @@ main {
   @media (min-width: 768px) {
     --circularSize: 26px;
   }
-}
+} */
