--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -7,20 +7,33 @@
   justify-content: center;
   gap: 6px;
   width: 100%;
+  padding: 0 3.5px;
 
   @media (min-width: 375px) {
     gap: 10px;
-
   }
-
 }
 
-.btnNav {
-  width: 32px;
-  height: 32px;
+.btnNav,
+.dots {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  min-width: 28px;
+  height: 28px;
   padding: 0;
   border-radius: 8px;
   border: 1px solid rgba(var(--rgb-color-font-primary), 0.1);
+  font-size: 13px;
+  font-weight: 600;
+  line-height: 18px;
+
+  @media (min-width: 375px) {
+    min-width: 32px;
+    padding: 7px 4px;
+    height: 32px;
+  }
 }
 
 .active {
