--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   display: flex;
   width: 100%;
   padding: 16px 0;
+  background-color: var(--background-header);
 
   @media (min-width: 768px) {
     padding: 20px 0;
@@ -57,6 +58,7 @@
   background-color: var(--color-primary);
   border-radius: var(--border-radius);
   width: 100%;
+  max-width: 288px;
 
   @media (min-width: 375px) {
     max-width: 343px;
