--- a/src/components/AddWordForm/AddWordHeader/AddWordHeader.module.css
+++ b/src/components/AddWordForm/AddWordHeader/AddWordHeader.module.css
@@ -9,6 +9,10 @@
   flex-direction: column;
   gap: 8px;
   height: 74px;
+
+  @media (min-width: 768px) {
+    width: 204px;
+  }
 }
 
 .selectForm {
