--- a/src/components/AuthForm/AuthForm.module.css
+++ b/src/components/AuthForm/AuthForm.module.css
@@ -1,6 +1,28 @@
-/* .authForm > *:not(:last-child) {
-  margin-bottom: 16px;
-} */
+.authForm {
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 375px;
+  padding: 32px 16px 57px;
+  background-color: rgba(var(--color-primary-rgb), 0.1);
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+  line-height: 24px;
+
+  @media (min-width: 768px) {
+    gap: 32px;
+    padding: 48px 64px;
+    max-width: 628px;
+    border-radius: var(--border-big-radius);
+  }
+
+  @media (min-width: 1440px) {
+    padding: 48px 64px;
+  }
+}
 
 .titleBlock {
   display: flex;
@@ -9,17 +31,11 @@
   text-align: left;
   gap: 16px;
   line-height: var(--lh-base);
+  height: 120px;
 
   @media (min-width: 768px) {
     gap: 20px;
-  }
-}
-
-form > .titleBlockLogin {
-  margin-bottom: 40px !important;
-
-  @media (min-width: 768px) {
-    margin-bottom: 32px !important;
+    height: 128px;
   }
 }
 
@@ -47,14 +63,15 @@ form > .titleBlockLogin {
   height: 56px;
 }
 
-.btnLogin {
-  width: 100%;
-  height: 56px;
+.authForm .btnWrap {
   margin-top: 16px;
+  gap: 16px;
 
   @media (min-width: 768px) {
     margin-top: 0;
-    width: 500px;
-    height: 60px;
   }
+}
+
+.authForm .btnWrap a {
+  text-decoration: underline;
 }
