--- a/src/components/Dashboard/Filters/Filters.module.css
+++ b/src/components/Dashboard/Filters/Filters.module.css
@@ -16,6 +16,7 @@
   font-size: var(--fs-base);
   line-height: 24px;
   font-weight: var(--fw-medium);
+  background-color: transparent;
 }
 
 .input::placeholder {
