--- a/src/components/InputFieldPassword/InputFieldPassword.module.css
+++ b/src/components/InputFieldPassword/InputFieldPassword.module.css
@@ -2,13 +2,13 @@
   width: 100%;
   height: 100%;
   border-radius: var(--border-radius);
-  border: 1px solid var(--border-input);
+  border: 1px solid rgba(var(--color-primary-rgb), 0.1);
   padding: 16px 18px;
   font-weight: var(--fw-regular);
   font-size: var(--fs-base);
   line-height: var(--lh-base);
   color: var(--color-font-primary);
-  background-color: rgba(var(--color-primary-rgb), 0.1);
+  background-color: transparent;
 }
 
 .btnEye {
@@ -21,13 +21,14 @@
   color: var(--color-font-primary);
 }
 
-.inputError {
+.field .inputError {
   border: 1px solid var(--color-error);
 }
 
-.inputValid {
+.field .inputValid {
   border: 1px solid var(--color-valid);
 }
+
 .error {
   position: absolute;
   bottom: -19px;
