--- a/src/components/UserNav/UserNav.module.css
+++ b/src/components/UserNav/UserNav.module.css
@@ -2,18 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
 
   @media (min-width: 1440px) {
-    gap: 28px;
     flex-direction: row;
-  }
-}
-
-.navItem {
-  margin-bottom: 29px;
-
-  @media (min-width: 1440px) {
-    margin-bottom: 0;
   }
 }
 
@@ -23,28 +15,36 @@
   text-align: center;
   color: var(--color-font-secondary);
   line-height: 19px;
+  padding: 12px 20px;
+  border-radius: var(--border-radius);
 
-  &:hover {
-    color: var(--color-font-primary);
+  &:hover,
+  :focus-visible {
+    color: var(--color-primary);
+    background-color: var(--color-font-secondary);
+
+    box-shadow:
+      inset 2px 2px 1px rgba(0, 0, 0, 0.7),
+      inset -2px -2px 4px rgba(255, 255, 255, 0.8);
+  }
+
+  &:active {
+    background-color: var(--color-hover);
+    color: var(--color-font-secondary);
   }
 
   @media (min-width: 1440px) {
     color: var(--color-font-primary);
-
-    &:hover {
-      color: var(--color-primary);
-    }
   }
 }
 
 .active {
-  padding: 12px 20px;
   color: var(--color-font-primary);
   background-color: var(--color-font-secondary);
-  border-radius: var(--border-radius);
 
   &:hover {
     color: var(--color-primary);
+    background-color: var(--color-font-secondary);
   }
 
   @media (min-width: 1440px) {
@@ -61,11 +61,26 @@
 .btnLogout {
   gap: 6px;
   text-wrap: nowrap;
-  padding: 0;
+  padding: 12px 20px;
   border: none;
   outline: none;
+  border-radius: var(--border-radius);
+
+  &:hover {
+    color: var(--color-primary);
+    background-color: var(--color-font-secondary);
+    box-shadow:
+      inset 2px 2px 1px rgba(0, 0, 0, 0.7),
+      inset -2px -2px 4px rgba(255, 255, 255, 0.8);
+  }
 
   @media (min-width: 1440px) {
+    border-radius: 0;
     display: none;
+    padding: 0;
+
+    &:hover {
+      box-shadow: none;
+    }
   }
 }
