--- a/src/components/WordsTable/table/useRecommendColumns.tsx/useRecommendColumns.module.css
+++ b/src/components/WordsTable/table/useRecommendColumns.tsx/useRecommendColumns.module.css
@@ -5,7 +5,7 @@
 
   @media (min-width: 375px) {
     padding: 16px;
-    width: 90px;
+    min-width: 90px;
   }
 
   @media (min-width: 768px) {
@@ -26,7 +26,7 @@
 
   @media (min-width: 375px) {
     padding: 16px 14px 16px 16px;
-    width: 116px;
+    min-width: 116px;
   }
 
   @media (min-width: 768px) {
@@ -42,7 +42,7 @@
 
 .category {
   padding-block: 16px;
-  width: 80px;
+  min-width: 80px;
 
   @media (min-width: 375px) {
     padding: 16px 12px 16px 16px;
