--- a/src/components/WordsTable/table/useRecommendColumns.tsx/useRecommendColumns.module.css
+++ b/src/components/WordsTable/table/useRecommendColumns.tsx/useRecommendColumns.module.css
@@ -5,7 +5,7 @@
 
   @media (min-width: 375px) {
     padding: 16px;
-    min-width: 90px;
+    width: 90px;
   }
 
   @media (min-width: 768px) {
@@ -26,7 +26,7 @@
 
   @media (min-width: 375px) {
     padding: 16px 14px 16px 16px;
-    min-width: 116px;
+    width: 116px;
   }
 
   @media (min-width: 768px) {
