--- a/src/components/form/BaseWordForm.module.css
+++ b/src/components/form/BaseWordForm.module.css
@@ -45,6 +45,7 @@ form .wordWrap {
 
   @media (min-width: 768px) {
     width: 354px;
+    height: 56px;
   }
 }
 
@@ -53,31 +54,42 @@ form .wordWrap {
   color: var(--color-font-secondary);
 }
 
-.btnWrap {
+form .btnWrap {
   display: flex;
+  flex-direction: row;
   gap: 8px;
   font-weight: var(--fe-bold);
+  width: 311px;
 
   @media (min-width: 768px) {
     font-size: var(--fs-big);
     line-height: 28px;
+    gap: 10px;
+    height: 56px;
+    width: 500px;
   }
 }
 
-.btnSave {
+.btnWrap .btnSubmit {
   width: 158px;
   height: 48px;
   border-radius: 30px;
   background-color: var(--color-font-secondary);
   line-height: 1.5;
   font-weight: var(--fw-bold);
+  color: var(--color-font-primary);
 
   &:hover {
     color: var(--color-primary);
   }
+
+  @media (min-width: 768px) {
+    height: 56px;
+    width: 245px;
+  }
 }
 
-.btnCancel {
+.btnWrap .btnCancel {
   width: 145px;
   height: 48px;
   border-radius: 30px;
@@ -88,10 +100,9 @@ form .wordWrap {
     background-color: var(--color-font-secondary);
     color: var(--color-font-primary);
   }
-}
 
-.formHeader {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+  @media (min-width: 768px) {
+    height: 56px;
+    width: 245px;
+  }
 }
