--- a/src/components/WellDoneModal/WellDoneModal.module.css
+++ b/src/components/WellDoneModal/WellDoneModal.module.css
@@ -25,8 +25,9 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0,0,0,0.2); 
+  background: rgba(0, 0, 0, 0.2);
   z-index: -1;
+  border-radius: var(--border-radius);
 }
 
 .containernWellDone {
