--- a/src/components/InputFieldPassword/InputFieldPassword.module.css
+++ b/src/components/InputFieldPassword/InputFieldPassword.module.css
@@ -9,6 +9,10 @@
   line-height: var(--lh-base);
   color: var(--color-font-primary);
   background-color: transparent;
+
+  &:hover {
+    border-color: var(--color-primary);
+  }
 }
 
 .btnEye {
@@ -29,18 +33,27 @@
   border: 1px solid var(--color-valid);
 }
 
-.error {
+.error,
+.valid {
   position: absolute;
   bottom: -19px;
   left: 18px;
   height: 18px;
   display: flex;
-  align-items: baseline;
+  align-items: stretch;
+  gap: 4px;
   text-align: left;
-  color: var(--color-error);
   font-size: 12px;
   font-weight: var(--fw-regular);
   line-height: normal;
+}
+
+.error {
+  color: var(--color-error);
+}
+
+.valid {
+  color: var(--color-valid);
 }
 
 .area {
@@ -52,4 +65,9 @@
   background-color: transparent;
   outline: none;
   resize: none;
+}
+
+.iconError {
+  width: 16px;
+  height: 16px;
 }
